Code structure/setup completed.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"prefix": "~",
-	"prefixHelp": "`~`",
+	"prefix": "s.",
+	"prefixHelp": "`s.`",
   "version": "V1.0",
   "acknowledgments": "🔨 with ❤️ by Techniack",
   "support": "Please contact `@Techniack#6243` for support"
